# dde-control-center

./: .clang-format  .clog.toml  .editorconfig  .gerrit_sources_list  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  DdeControlCenterConfig.cmake.in  Makefile  README.md  README.zh_CN.md  add_copyright.py  com.deepin.Dss.service  com.deepin.controlcenter.addomain.policy  com.deepin.controlcenter.develop.policy  com.deepin.controlcenter.restore.policy  com.deepin.controlcenter.restoreRk.policy  com.deepin.dde-grand-search.dde-control-center-setting.conf  com.deepin.dde.ControlCenter.service  com.deepin.dde.control-center.gschema.xml  com.deepin.system.settings.service  common.pri  config.pri  dde-control-center-autostart.desktop  dde-control-center-daemon.desktop  dde-control-center-dbus.desktop  dde-control-center-wapper  dde-control-center.desktop  dde-control-center.pro  dde-control-center_autostart.desktop  dde-dock-applets-autostart.desktop  dss-daemon.desktop  dss.desktop  git show d3aa0c06  lupdate.sh  translate_desktop2ts.sh  (+2 more)
dcc-network-plugin/: CMakeLists.txt  airplanemodepage.cpp  airplanemodepage.h  chainsproxypage.cpp  chainsproxypage.h  chainstypepage.cpp  chainstypepage.h  connectioneditpage.cpp  connectioneditpage.h  connectionhotspoteditpage.cpp  connectionhotspoteditpage.h  connectionpageitem.cpp  connectionpageitem.h  connectionvpneditpage.cpp  connectionvpneditpage.h  connectionwirelesseditpage.cpp  connectionwirelesseditpage.h  dccnetworkmodule.cpp  dccnetworkmodule.h  hotspotpage.cpp  hotspotpage.h  lupdate.sh  network.qrc  networkdetailpage.cpp  networkdetailpage.h  networkmodulewidget.cpp  networkmodulewidget.h  parameterscontainer.cpp  parameterscontainer.h  pppoepage.cpp  pppoepage.h  proxypage.cpp  proxypage.h  vpnpage.cpp  vpnpage.h  wiredpage.cpp  wiredpage.h  wirelesspage.cpp  wirelesspage.h
dcc-network-plugin/icons/: dcc-network-plugin.qrc
dcc-network-plugin/sections/: abstractsection.cpp  abstractsection.h  declare_metatype_for_networkmanager.h  dnssection.cpp  dnssection.h  ethernetsection.cpp  ethernetsection.h  generichotspotsection.cpp  generichotspotsection.h  genericsection.cpp  genericsection.h  ipvxsection.cpp  ipvxsection.h  multiipvxsection.cpp  multiipvxsection.h  pppoesection.cpp  pppoesection.h  pppsection.cpp  pppsection.h  secret8021xsection.cpp  secret8021xsection.h  secrethotspotsection.cpp  secrethotspotsection.h  secretwiredsection.cpp  secretwiredsection.h  secretwirelesssection.cpp  secretwirelesssection.h  wirelesssection.cpp  wirelesssection.h
dcc-network-plugin/settings/: abstractsettings.cpp  abstractsettings.h  dslpppoesettings.cpp  dslpppoesettings.h  hotspotsettings.cpp  hotspotsettings.h  wiredsettings.cpp  wiredsettings.h  wirelesssettings.cpp  wirelesssettings.h
dcc-network-plugin/translations/: dcc-network-plugin.ts  dcc-network-plugin_am_ET.ts  dcc-network-plugin_ar.ts  dcc-network-plugin_az.ts  dcc-network-plugin_bg.ts  dcc-network-plugin_bn.ts  dcc-network-plugin_bo.ts  dcc-network-plugin_ca.ts  dcc-network-plugin_cs.ts  dcc-network-plugin_da.ts  dcc-network-plugin_de.ts  dcc-network-plugin_el.ts  dcc-network-plugin_en_AU.ts  dcc-network-plugin_en_US.ts  dcc-network-plugin_es.ts  dcc-network-plugin_fa.ts  dcc-network-plugin_fi.ts  dcc-network-plugin_fr.ts  dcc-network-plugin_gl_ES.ts  dcc-network-plugin_hi_IN.ts  dcc-network-plugin_hr.ts  dcc-network-plugin_hu.ts  dcc-network-plugin_id.ts  dcc-network-plugin_it.ts  dcc-network-plugin_ja.ts  dcc-network-plugin_kab.ts  dcc-network-plugin_ko.ts  dcc-network-plugin_lt.ts  dcc-network-plugin_mn.ts  dcc-network-plugin_ms.ts  (+21 more)
dcc-old/: CMakeLists.txt
docs/: CMakeLists.txt  internaltest.md  v23-dcc-interface.md  v23-dcc-interface.zh_CN.md  v25-dcc-interface.zh_CN.md
dss-network-plugin/: CMakeLists.txt  dockpopupwindow.cpp  dockpopupwindow.h  lupdate.sh  network.json  network_module.cpp  network_module.h  notificationmanager.cpp  notificationmanager.h
dss_example/: CMakeLists.txt  dsstestwidget.cpp  dsstestwidget.h  main.cpp
example/: CMakeLists.txt  dccplugintestwidget.cpp  dccplugintestwidget.h  example.qrc  main.cpp  networkhandler.cpp  networkhandler.h
misc/: DdeControlCenterConfig.cmake.in  DdeControlCenterConfigOld.cmake.in  DdeControlCenterPluginMacros.cmake  com.deepin.dde.ControlCenter.service  dde-control-center-loader-wrapper  dde-control-center.desktop  dde-control-center.in  developdocument.html  gen_report.sh  lupdate.sh  meson.build  metainfo.its  org.deepin.dde-grand-search.dde-control-center-setting.conf  org.deepin.dde.ControlCenter.service  org.deepin.dde.ControlCenter1.service  org.deepin.dde.ControlCenter1.service.in  org.deepin.dde.control-center.desktop  org.deepin.dde.controlcenter.metainfo.xml  translate_desktop2ts.sh  translate_generation.sh  translate_language2ts.sh  translate_ts2desktop.sh
shell-network-plugin/: 10-network-manager.pkla  CMakeLists.txt  lupdate.sh  network_module.cpp  network_module.h  networkpanel.cpp  networkpanel.h  notificationmanager.cpp
src/: CMakeLists.txt  control-center.pro  dde-network-core.pc.in  dslcontroller.cpp  dslcontroller.h  hotspotcontroller.cpp  hotspotcontroller.h  ipconfilctchecker.cpp  ipconfilctchecker.h  modules.qrc  netutils.cpp  netutils.h  networkconst.cpp  networkconst.h  networkcontroller.cpp  networkcontroller.h  networkdetails.cpp  networkdetails.h  networkdevicebase.cpp  networkdevicebase.h  proxycontroller.cpp  proxycontroller.h  qmlloader.cpp  qmlloader.h  rebuild.sh  utils.cpp  utils.h  views.qrc  vpncontroller.cpp  vpncontroller.h  wireddevice.cpp  wireddevice.h  wirelessdevice.cpp  wirelessdevice.h
testsolib/: CMakeLists.txt  keylabel.cpp  keylabel.h  shortcutitem.cpp  shortcutitem.h  shortcutkey.cpp  testsolib.pro  testsomodule.cpp  testsomodule.h  testsowidget.cpp  testsowidget.h  thirdpage1.cpp  thirdpage1.h
tst-dde-network-core/: CMakeLists.txt  main.cpp  test-recoverage.sh  ts_dslcontroller.cpp  ts_hotspotcontroller.cpp  ts_networkcontroller.cpp  ts_proxycontroller.cpp  ts_vpncontroller.cpp
(+7505 files in other folders)
